Reviewed by Darin.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=11830

Fix fundamental problems with JS SVG POD types.
(currently: FloatPoint/FloatRect/AffineTransform)


Canonical link: https://commits.webkit.org/15291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18217 268f45cc-cd09-0410-ab3c-d52691b4dbfc