WebCore/ksvg2/svg/SVGElement.h
@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2004, 2005 Nikolas Zimmermann <wildfox@kde.org>
+    Copyright (C) 2004, 2005, 2006 Nikolas Zimmermann <zimmermann@kde.org>
                   2004, 2005, 2006 Rob Buis <buis@kde.org>
 
     This file is part of the KDE project
@@ -20,8 +20,9 @@
     Boston, MA 02111-1307, USA.
 */
 
-#ifndef KSVG_SVGElementImpl_H
-#define KSVG_SVGElementImpl_H
+#ifndef SVGElement_H
+#define SVGElement_H
+
 #ifdef SVG_SUPPORT
 
 #include "Document.h"
@@ -33,17 +34,21 @@
 
 #define ANIMATED_PROPERTY_EMPTY_DECLARATIONS(BareType, NullType, UpperProperty, LowerProperty) \
 public: \
-    virtual BareType LowerProperty() const { ASSERT(false); return NullType; } \
-    virtual void set##UpperProperty(BareType newValue) { ASSERT(false); }\
-    virtual BareType LowerProperty##BaseValue() const { ASSERT(false); return NullType; } \
-    virtual void set##UpperProperty##BaseValue(BareType newValue) { ASSERT(false); }
+    virtual BareType LowerProperty() const { ASSERT_NOT_REACHED(); return NullType; } \
+    virtual void set##UpperProperty(BareType newValue) { ASSERT_NOT_REACHED(); }\
+    virtual BareType LowerProperty##BaseValue() const { ASSERT_NOT_REACHED(); return NullType; } \
+    virtual void set##UpperProperty##BaseValue(BareType newValue) { ASSERT_NOT_REACHED(); } \
+    virtual void start##UpperProperty() const { ASSERT_NOT_REACHED(); } \
+    virtual void stop##UpperProperty() { ASSERT_NOT_REACHED(); }
 
 #define ANIMATED_PROPERTY_FORWARD_DECLARATIONS(ForwardClass, BareType, UpperProperty, LowerProperty) \
 public: \
     virtual BareType LowerProperty() const { return ForwardClass::LowerProperty(); } \
     virtual void set##UpperProperty(BareType newValue) { ForwardClass::set##UpperProperty(newValue); } \
     virtual BareType LowerProperty##BaseValue() const { return ForwardClass::LowerProperty##BaseValue(); } \
-    virtual void set##UpperProperty##BaseValue(BareType newValue) { ForwardClass::set##UpperProperty##BaseValue(newValue); }
+    virtual void set##UpperProperty##BaseValue(BareType newValue) { ForwardClass::set##UpperProperty##BaseValue(newValue); } \
+    virtual void start##UpperProperty() const { ForwardClass::start##UpperProperty(); } \
+    virtual void stop##UpperProperty() { ForwardClass::stop##UpperProperty(); }
 
 #define ANIMATED_PROPERTY_DECLARATIONS_INTERNAL(ClassType, ClassStorageType, BareType, StorageType, UpperProperty, LowerProperty) \
 class SVGAnimatedTemplate##UpperProperty \
@@ -56,6 +61,7 @@ public: \
     virtual void setBaseVal(BareType newBaseVal); \
     virtual BareType animVal() const; \
     virtual void setAnimVal(BareType newAnimVal); \
+\
 protected: \
     ClassStorageType m_element; \
 }; \
@@ -65,6 +71,9 @@ public: \
     BareType LowerProperty##BaseValue() const; \
     void set##UpperProperty##BaseValue(BareType newValue); \
     PassRefPtr<SVGAnimatedTemplate##UpperProperty> LowerProperty##Animated() const; \
+    void start##UpperProperty() const; \
+    void stop##UpperProperty(); \
+\
 private: \
     StorageType m_##LowerProperty;
 
@@ -82,7 +91,7 @@ void ClassName::SVGAnimatedTemplate##UpperProperty::setBaseVal(BareType newBaseV
 BareType ClassName::SVGAnimatedTemplate##UpperProperty::animVal() const \
 { \
     return m_element->LowerProperty(); \
-}\
+} \
 void ClassName::SVGAnimatedTemplate##UpperProperty::setAnimVal(BareType newAnimVal) \
 { \
     m_element->set##UpperProperty(newAnimVal); \
@@ -98,7 +107,7 @@ void ClassName::set##UpperProperty(BareType newValue) \
 BareType ClassName::LowerProperty##BaseValue() const \
 { \
     const SVGElement* context = ContextElement; \
-    ASSERT(context != 0); \
+    ASSERT(context); \
     SVGDocumentExtensions* extensions = (context->document() ? context->document()->accessSVGExtensions() : 0); \
     if (extensions && extensions->hasBaseValue<BareType>(context, AttrName)) \
          return extensions->baseValue<BareType>(context, AttrName); \
@@ -107,11 +116,37 @@ BareType ClassName::LowerProperty##BaseValue() const \
 void ClassName::set##UpperProperty##BaseValue(BareType newValue) \
 { \
     const SVGElement* context = ContextElement; \
-    ASSERT(context != 0); \
+    ASSERT(context); \
     SVGDocumentExtensions* extensions = (context->document() ? context->document()->accessSVGExtensions() : 0); \
-    if (extensions && extensions->hasBaseValue<BareType>(context, AttrName)) \
+    if (extensions && extensions->hasBaseValue<BareType>(context, AttrName)) { \
         extensions->setBaseValue<BareType>(context, AttrName, newValue); \
+        return; \
+    } \
+    /* Only update stored property, if not animating */ \
     set##UpperProperty(newValue); \
+} \
+\
+void ClassName::start##UpperProperty() const \
+{ \
+    const SVGElement* context = ContextElement; \
+    ASSERT(context); \
+    SVGDocumentExtensions* extensions = (context->document() ? context->document()->accessSVGExtensions() : 0); \
+    if (extensions) { \
+        ASSERT(!extensions->hasBaseValue<BareType>(context, AttrName)); \
+        extensions->setBaseValue<BareType>(context, AttrName, LowerProperty()); \
+    } \
+} \
+\
+void ClassName::stop##UpperProperty() \
+{ \
+    const SVGElement* context = ContextElement; \
+    ASSERT(context); \
+    SVGDocumentExtensions* extensions = (context->document() ? context->document()->accessSVGExtensions() : 0); \
+    if (extensions) { \
+        ASSERT(extensions->hasBaseValue<BareType>(context, AttrName)); \
+        set##UpperProperty(extensions->baseValue<BareType>(context, AttrName)); \
+        extensions->removeBaseValue<BareType>(context, AttrName); \
+    } \
 }
 
 // These are the macros which will be used to declare/implement the svg animated properties...
@@ -126,7 +161,7 @@ ANIMATED_PROPERTY_DEFINITIONS_INTERNAL(ClassName, SVGElement, BareType, UpperCla
 PassRefPtr<ClassName::SVGAnimatedTemplate##UpperProperty> ClassName::LowerProperty##Animated() const \
 { \
     const SVGElement* context = contextElement(); \
-    ASSERT(context != 0); \
+    ASSERT(context); \
     return RefPtr<ClassName::SVGAnimatedTemplate##UpperProperty>(new ClassName::SVGAnimatedTemplate##UpperProperty(context)); \
 }
 
@@ -196,7 +231,6 @@ namespace WebCore {
         virtual bool haveLoadedRequiredResources();
     };
 
-
     static inline SVGElement* svg_dynamic_cast(Node* node)
     {
         SVGElement* svgElement = 0;
@@ -208,6 +242,6 @@ namespace WebCore {
 } // namespace WebCore 
 
 #endif // SVG_SUPPORT
-#endif // KSVG_SVGElementImpl_H
+#endif // SVGElement_H
 
 // vim:ts=4:noet
